fix port-problem and error handling

--- a/src/test/resources/debug-config/application.properties
+++ b/src/test/resources/debug-config/application.properties
@@ -1,4 +1,4 @@
-solr4files.daemon.http.port=20170
+daemon.http.port=20170
 
 # terminating slash is required
 bag-store.url=http://test.dans.knaw.nl:20110/
