--- a/src/main/ansible/roles/bag-store-dirs/defaults/main.yml
+++ b/src/main/ansible/roles/bag-store-dirs/defaults/main.yml
@@ -14,34 +14,8 @@
 # limitations under the License.
 #
 
-- hosts: "test"
-  become: yes
-  vars:
-    local_test_vm_base_backend_port: 20170
-  roles:
-    - dans.local-test-vm-base
-    - dans.local-yum-repo
-
-- hosts: "test"
-  become: yes
-  vars:
-    dans_config_base: "/etc/opt/dans.knaw.nl"
-    modules:
-      - easy-bag-store
-      - easy-auth-info
-  tasks:
-
-    - name: Installing packages
-      yum:
-        name: "dans.knaw.nl-{{ item }}"
-        state: latest
-      with_items: "{{ modules }}"
-
-    - include_role:
-        name: bag-store-dirs
-
-    - service:
-        name: "{{ item }}"
-        state: started
-        enabled: yes
-      with_items: "{{ modules }}"
+stores_dir: "/data/bag-stores"
+bag_stores:
+  - { name: "pdbs",      base_dir: "{{ stores_dir }}/pdbs" }
+  - { name: "easy",      base_dir: "{{ stores_dir }}/easy" }
+  - { name: "pan",       base_dir: "{{ stores_dir }}/pan" }
