--- a/src/main/ansible/roles/bag-store-dirs/tasks/main.yml
+++ b/src/main/ansible/roles/bag-store-dirs/tasks/main.yml
@@ -14,34 +14,17 @@
 # limitations under the License.
 #
 
-- hosts: "test"
-  become: yes
-  vars:
-    local_test_vm_base_backend_port: 20170
-  roles:
-    - dans.local-test-vm-base
-    - dans.local-yum-repo
+- name: Configure bag stores
+  lineinfile:
+      dest: "{{ dans_config_base }}/easy-bag-store/stores.properties"
+      line: "{{ item.name }}={{ item.base_dir }}"
+  with_items: "{{ bag_stores }}"
 
-- hosts: "test"
-  become: yes
-  vars:
-    dans_config_base: "/etc/opt/dans.knaw.nl"
-    modules:
-      - easy-bag-store
-      - easy-auth-info
-  tasks:
-
-    - name: Installing packages
-      yum:
-        name: "dans.knaw.nl-{{ item }}"
-        state: latest
-      with_items: "{{ modules }}"
-
-    - include_role:
-        name: bag-store-dirs
-
-    - service:
-        name: "{{ item }}"
-        state: started
-        enabled: yes
-      with_items: "{{ modules }}"
+- name: Create empty bag-store base directories
+  file:
+    path: "{{ stores_dir }}/{{ item.name }}"
+    state: "directory"
+    owner: "easy-bag-store"
+    group: "easy-bag-store"
+    mode: "0775"
+  with_items: "{{ bag_stores }}"
