--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,15 @@
             <artifactId>guava</artifactId>
             <version>20.0</version>
         </dependency>
+        <dependency>
+            <!--
+            TODO move dependency to dans-prototype once the other SOLR is upgraded from v3 to v6
+            currently this gives too many problems in the inheritance to easy-app/easy-webui
+            -->
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-solrj</artifactId>
+            <version>6.6.0</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
