--- a/src/test/resources/debug-config/application.properties
+++ b/src/test/resources/debug-config/application.properties
@@ -2,3 +2,4 @@ daemon.http.port=20170
 
 # terminating slash is required
 bag-store.url=http://test.dans.knaw.nl:20110/
+solr.url=http://deasy.dans.knaw.nl:8983/solr/authinfo/
