--- a/src/test/resources/debug-config/application.properties
+++ b/src/test/resources/debug-config/application.properties
@@ -2,4 +2,9 @@ daemon.http.port=20170
 
 # terminating slash is required
 bag-store.url=http://test.dans.knaw.nl:20110/
-solr.url=http://deasy.dans.knaw.nl:8983/solr/authinfo/
+
+# no terminating slash
+solr.url=http://test.dans.knaw.nl:8983/solr
+solr.collection=authinfo
+#see also system properties for <autoCommit> and <AutoSoftCommit> in authinfo/solrconfig.xml
+solr.commitWithinMs=15000
