--- a/docs/api/api.yml
+++ b/docs/api/api.yml
@@ -116,8 +116,8 @@ components:
             description: The auth info on an item from the bag store.
             type: string
             example:
-              ""itemId"":""40594b6d-8378-4260-b96b-13b57beadf7c/data/pakbon.xml"",
-              ""owner":"someone"",
-              ""dateAvailable"":""1992-07-30"",
-              ""accessibleTo"":""KNOWN""
-              ""visibleTo"":""KNOWN""
+              <"itemId":"40594b6d-8378-4260-b96b-13b57beadf7c/data/pakbon.xml",>
+              <"owner":"someone",>
+              <"dateAvailable":""1992-07-30",>
+              <"accessibleTo":"KNOWN",>
+              <"visibleTo":"KNOWN">
