--- a/docs/api/api.yml
+++ b/docs/api/api.yml
@@ -127,8 +127,8 @@ components:
             description: The auth info on an item from the bag store.
               type: string
             example:
-              itemid: '"itemId":"40594b6d-8378-4260-b96b-13b57beadf7c/data/pakbon.xml"'
-              owner: '"owner":"someone",'
-              dataAvaliable: '"dateAvailable":"1992-07-30",'
-              accessibleTo: '"accessibleTo":"KNOWN",'
-              visibleTo: '"visibleTo":"KNOWN"'
+              itemid: 40594b6d-8378-4260-b96b-13b57beadf7c/data/pakbon.xml
+              owner: someone,
+              dataAvaliable: dateAvailable: 1992-07-30,
+              accessibleTo: accessibleTo : KNOWN,
+              visibleTo: visibleTo : KNOWN
