--- a/docs/api/api.yml
+++ b/docs/api/api.yml
@@ -103,3 +103,7 @@ components:
           type: string
         visibleTo:
           type: string
+        licenseKey:
+          type: string
+        licenseTitle:
+          type: string
