Changed developerConnection to ssh

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <easy.licenses.version>1.0.7</easy.licenses.version>
     </properties>
     <scm>
-        <developerConnection>scm:git:https://github.com/DANS-KNAW/${project.artifactId}</developerConnection>
+        <developerConnection>scm:git:ssh://github.com/DANS-KNAW/${project.artifactId}</developerConnection>
         <tag>HEAD</tag>
     </scm>
     <dependencies>
